[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/Todot/Src/List/List.gd" type="Script" id=1]
[ext_resource path="res://addons/Todot/Src/List/ListTitle.tscn" type="PackedScene" id=2]

[node name="List" type="PanelContainer" groups=["List"]]
margin_right = 280.0
margin_bottom = 90.0
rect_min_size = Vector2( 280, 0 )
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 287.0
margin_bottom = 83.0
custom_constants/separation = 16

[node name="ListTitle" parent="VBox" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_bottom = 22.0
rect_min_size = Vector2( 280, 22 )
focus_mode = 0
custom_constants/hseparation = 0
enabled_focus_mode = 0
list = NodePath("../..")

[node name="CardContainer" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
margin_top = 38.0
margin_right = 280.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 5

[node name="Add" type="Button" parent="VBox"]
margin_top = 54.0
margin_right = 280.0
margin_bottom = 74.0
text = "ADD"

[connection signal="pressed" from="VBox/Add" to="." method="_on_Button_pressed"]
